added cart animation, fixed function addToCart

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "shoestore",
+  "name": "react-shoestore",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/sepalaznik/react-shoestore/",
+  "proxy": "https://6160a822faa03600179fbb5f.mockapi.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -19,8 +21,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
