--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "react-shoestore",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/sepalaznik/react-shoestore/",
-  "proxy": "https://6160a822faa03600179fbb5f.mockapi.io",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.22.0",
+    "gh-pages": "^3.2.3",
     "macro-css": "^1.0.5",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
