added logic changed to correct work

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-shoestore",
-  "version": "0.1.0",
+  "version": "0.4.2",
   "private": true,
   "homepage": ".",
   "dependencies": {
@@ -21,6 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test": "react-scripts test",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
